添加基础表格样式

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "云图在线",
+  "name": "cli-nuxt",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "lichunluo <lichunluo92@163.com>",
